--- a/content/blog/2017-10-03-Meet_Dumb_Hardwax.Rmd
+++ b/content/blog/2017-10-03-Meet_Dumb_Hardwax.Rmd
@@ -2,13 +2,13 @@
 title: "Meet Dumb Hardwax: Markov Chains & Twitter Bots in the Cloud, in R"
 date: "2017-09-07"
 type: "post"
-tags: ["R", "Bots", "Web Scraping", "Cloud Computing", "Markov Chains"]
+tags: ["R", "Bots", "Web Scraping", "Azure", "Markov Chains"]
 ---
 
 ```{r setup, include=FALSE}
 
 # markdown setup
-knitr::opts_chunk$set(cache=TRUE, echo = FALSE, tidy = TRUE, warning = FALSE, message = FALSE, out.width = '100%', dpi = 180)
+knitr::opts_chunk$set(cache=TRUE, echo = TRUE, tidy = TRUE, warning = FALSE, message = FALSE, out.width = '100%', dpi = 180)
 
 # load pkgs for session
 library(tidyverse)
@@ -24,30 +24,29 @@ Twitter bots have gotten a fairly bad rap, recently [(often with good reason)](h
 
 <br>
 
-Another thing I like reading is [Hardwax](https://hardwax.com/), a hugely influential Berlin record store, get excited about their new stock. Their snappy desciptions of new music is steeped in electronic music fan folklore. Gems like this are peppered all over the site:
+Another thing I like reading is [Hardwax](https://hardwax.com/), a hugely influential Berlin record store, get excited about their new stock. Their snappy, idiosyncratic desciptions of new music is steeped in electronic music folklore. Gems like this are peppered all over the site:
 
 > "Like Dancehall from cyberspace - awesomely fresh & fearless & full of Grime affinities"
 
-I love flicking through gold like this over there, but as a Londoner I'm usually gonna pick up records from the local stores. This means I don't get around to checking these as much as I should, which got me thinking - I wish I could have Hardwax reviews in the Twitter feed. They even fit in to 140 characters most of the time! 
+I could flick throught these all day, but as a Londoner I'm usually gonna pick up records from the local stores. This means I don't get around to checking these as much as I should, which got me thinking - I wish I could have Hardwax reviews in the Twitter feed. They even fit in to 140 characters most of the time...
 
-I'd also been meaning to have a go at generating pseudo random text with Markov chains. For those that don't know, ([this](http://setosa.io/ev/markov-chains/) is a wicked visual intro), these are mathematical systems that describe the probabilities of moving from one "state" (or set of values) to another. There seems legitimate potential to subvert this principle for the purpose of knitting together words to form my own fake Hardwax reviews. 
+I'd also been meaning to have a go at generating pseudo random text with Markov chains, after coming across [Roel's post here](http://rmhogervorst.nl/cleancode/blog/2017/01/21/markov-chain.html). For those that don't know about this type of chain, [this](http://setosa.io/ev/markov-chains/) is a wicked visual intro, but in short they are mathematical systems that describe the probabilities of moving from one "state" (or set of values) to another. Could there be potential to subvert this principle for the purpose of knitting together words to form my own fake Hardwax reviews? 
 
 So, a bot that spits out pseudo-Hardwax reviews, just for my sadistic enjoyment. Let's get it.
 
 <br>
 
-## Getting in to a scrape
+## Gettin' in to a scrape
 
-Here's what the release pages look like, over at Hardwax's site:
+First up, I went straight to the Hardwax webshop to see if I could get hold of the review/description text accompanying releases on there. This could serve as the corpus of text from which we can base our markov chain review generator on. Here's what the release pages look like, over at Hardwax's site:
 
 ```{r site pic, out.width = "100%", fig.align = "center"}
 knitr::include_graphics("/img/2017-10-03-Meet_Dumb_Hardwax/hardwax site.png")
 ```
 
+Those bits circled in red? *Those* are the Hardwax reviews. I was able to put together a fairly simple function (leaning heavily on `rvest`) to scrape them.
 
-I was able to put together a fairly simple function (leaning heavily on `rvest`) to scrape the reviews (bits encircled in red).
-
-```{r hardwax scrape, echo=TRUE}
+```{r hardwax scrape}
 
 # web scraper for hardwax reviews
 hardwax_scrape <- function(page, no) {
@@ -65,16 +64,16 @@ hardwax_scrape <- function(page, no) {
 }
 ```
 
-This made it simple business to gather up reviews from different areas, like the latest weeks new ish:
+This URL structure could be applied for each section/genre on the site, like the latest weeks new ish:
 
-```{r scrape eg, echo=TRUE}
+```{r scrape eg}
 
 # scrape news
 lapply(seq_along(1:2), hardwax_scrape, page="this-week") %>% unlist() %>% head()
 
 ```
 
-```{r scrape rest}
+```{r scrape rest, echo=FALSE}
 
 # scrape last weeks news
 last_news <- lapply(seq_along(1:3), hardwax_scrape, page="last-week") %>% unlist()
@@ -101,9 +100,9 @@ house <- lapply(seq_along(1:42), hardwax_scrape, page="house") %>% unlist()
 reviews <- c(news, last_news, back_in_stock, downloads, electro, grime, techno, house)
 ```
 
-Once the various sections were scraped, some minor data cleaning ensures the reviews are fit for purpose to head on to the next stage - remove releases with no reviews, reviews longer than 140 characters, or duplicate reviews. This text would now serve as the corpus of text from which we can start generating whole new reviews.
+Once the various sections were scraped, some data cleaning procedures (remove releases with no reviews, reviews longer than 140 characters, or duplicate reviews) ensured the reviews were fit for purpose to head on to the next stage.[^fullcode]
 
-```{r clean, echo=TRUE}
+```{r clean, echo=FALSE}
 
 # check strings 140 chrs at most
 reviews <- reviews[str_length(reviews) <= 140]
@@ -119,9 +118,92 @@ reviews <- as_data_frame(reviews)
 
 <br>
 
-## Masquerading Markov Chains
+## Preppin' the Text  
 
-Now we're entering text mining territory, it's time to call on the might of `tidytext` to bring our body of text into forms suitable for Markov Chain text generation. A large part of the prep work here is detailed in a similar 
+Now we're entering text mining territory, it's time to call on the might of `tidytext` to bring our body of text into forms suitable for Markov Chain text generation. A few wise steps should see us through.
+
+1. Counts: To aid the probabilistic elements of markov chain text generation, we need an understanding of how many times words appear, in different contexts:
+
+    - No. times words appear in corpus (all webstite review text)
+    - No. times words appear at the beginning of a review (herein known as 'openers')
+    - No. times words precede commas
+    
+```{r counts, echo=FALSE}
+# get unique words
+word_counts <- reviews %>%
+  unnest_tokens(word, value, token = "ngrams", to_lower = TRUE, n = 1) %>%
+  count(word, sort = TRUE) %>% filter(word != "")
+
+# get sentence openers
+opener_counts <- str_extract(reviews$value, '\\w*') %>% 
+  str_to_lower() %>% 
+  as_data_frame() %>%
+  count(value, sort = TRUE) %>% 
+  rename(word=value) %>% 
+  filter(word != "")
+
+# get words preceding commas
+comma_precede <- str_split_fixed(reviews$value, ',', 5)  %>% 
+  as_data_frame() %>% 
+  filter(`V1` != "")
+
+a <- comma_precede %>% filter(V2 != "") 
+b <- a %>% filter(`V3` != "") %>% select(`V2`)
+c <- a %>% filter(`V4` != "") %>% select(`V3`)
+d <- a %>% filter(`V5` != "") %>% select(`V4`)
+
+comma_precede <- c(a$V1, b$V2, c$V3, d$V4) %>% as_data_frame()
+
+# get last words preceding commas
+comma_precede$value <- word(comma_precede$value, -1)
+
+# make lower case
+comma_precede$value <- tolower(comma_precede$value)
+
+# get word proceeding comma counts
+comma_precede_counts <- count(comma_precede, value, sort = TRUE) %>% rename(comma_n=n)
+
+# join to abs word counts
+word_counts <- left_join(word_counts, comma_precede_counts, by=c("word"="value"))
+opener_counts <- left_join(opener_counts, comma_precede_counts, by=c("word"="value"))
+
+# probability of comma after word
+word_counts$comma_prob <- round((word_counts$comma_n / word_counts$n) * 100)
+opener_counts$comma_prob <- round((opener_counts$comma_n / opener_counts$n) * 100)
+word_counts$comma_prob[is.na(word_counts$comma_prob)] <- 0
+opener_counts$comma_prob[is.na(opener_counts$comma_prob)] <- 0
+```
+
+2. Ngrams:
+
+    - Bigrams (pairs of consecutive words)
+    - Trigrams (groups of three consecutive words)
+    
+```{r ngrams, echo=FALSE}
+# create bigrams
+bigrams <- reviews %>%
+  unnest_tokens(bigram, value, token = "ngrams", to_lower = TRUE, n = 2) %>% 
+  # separate bigram col
+  separate(bigram, c("word1", "word2"), sep = " ")
+
+# new bigram counts:
+bigram_counts <- bigrams %>% 
+  count(word1, word2, sort = TRUE)
+
+# create bigrams
+trigrams <- reviews %>%
+  unnest_tokens(trigram, value, token = "ngrams", to_lower = TRUE, n = 3) %>% 
+  # separate bigram col
+  separate(trigram, c("word1", "word2", "word3"), sep = " ")
+
+# new bigram counts:
+trigram_counts <- trigrams %>% 
+  count(word1, word2, word3, sort = TRUE)
+```
+
+<br>
+
+## 
 
 <br>
 
