--- a/public/blog/2018-09-17-legends-of-the-mixtape.Rmd
+++ b/public/blog/2018-09-17-legends-of-the-mixtape.Rmd
@@ -16,27 +16,29 @@ knitr::opts_chunk$set(cache = FALSE, warning = FALSE, message = FALSE, echo = FA
 knitr::include_graphics("/img/2018-09-17-legends-of-the-mixtape/xxx-art.jpg")
 ```
 
-The modern definition of the hip-hop mixtape originates in hip-hop circles of the 2000s, now talking to an artist's independently released projects that act as precursors to "official" full-lengths (albums). [In previous generations](https://www.billboard.com/articles/columns/hip-hop/7669073/history-dj-drama-mixtape-evolution), hip-hop mixtapes were more DJ-led and focused on ingenuity of "chops" and "blends", but the DIY ethos prevailed through the shift towards MCs as main attraction. The dawn of mainstream streaming services and outgoing physical formats has challenged the identity of the mixtape somewhat, but understanding how the art form has reinvented itself around the current climate helps alleviate these concerns somewhat.
+The modern definition of the hip-hop mixtape originates in hip-hop circles of the 2000s, speaking to an artist's independently released projects that act as precursors to "official" full-lengths. [In previous generations](https://www.billboard.com/articles/columns/hip-hop/7669073/history-dj-drama-mixtape-evolution), hip-hop mixtapes were more DJ-led and focused on the ingenuity of the edit, but a DIY ethos has prevailed with a shift towards MCs as main attraction. The rise of mainstream streaming services and fall of physical formats has challenged the identity of the mixtape somewhat, but understanding how this artform has reinvented itself around the current climate might help alleviate these concerns.
 
-Traditionally speaking, the mixtape format means a couple of things. They are usually free, and subsequently avoid copyright issues usually associated with recording techniques like [sampling](https://en.wikipedia.org/wiki/Sampling_(music)) (a hip-hop beatmaker's staple). This helps partly explain why some mixtapes have been accompanied by astonishing groundswells of support in spite of modest investment, why mixtape culture is spoken about in reverential terms and why it continues to be a medium for inspired work - the music is unashamedly open-source in attitude, both practically (transmission to fans i.e. for free) and philosophically (treatment of historic recordings).
+Traditionally speaking, mixtapes are usually free and subsequently avoid growing copyright issues associated with recording techniques like [sampling](https://en.wikipedia.org/wiki/Sampling_(music)) (central to a hip-hop beatmaker's wheelhouse). This helps partly explain why some mixtapes have been accompanied by astonishing groundswells of support in spite of modest investment, why mixtape culture is spoken about in reverential terms and why it continues to be a medium for inspired work - the music is unashamedly open-source in attitude, both in it's transmission to fans (i.e. for free) and it's creation (i.e. freely plucking historic recordings).
 
-You can actually see how this cultural phenomenon intersects with software development. Take [Glitch's about page](https://glitch.com/about), specifically the use of the word "remix", hinting that the act of a developer re-working an app (that someone else built and shared) is a bit like [Frank Ocean flipping a Coldplay sample](https://www.youtube.com/watch?v=zD3lRLThVRY). (I'm aware that, beyond staring at computer screens in the dark, the developer-musician comparisons probably stop here).
+You can actually see how this cultural phenomenon intersects with software development. Take [Glitch's about page](https://glitch.com/about), specifically the use of the word "remix", hinting that the act of a developer re-working an app (that someone else built and shared) isn't that far removed from [Frank Ocean flipping a Coldplay sample](https://www.youtube.com/watch?v=zD3lRLThVRY). (I'm aware that, beyond staring at computer screens in the dark, the developer-musician comparisons probably stop here).
 
 ```{r out.width="75%"}
 knitr::include_graphics("/img/2018-09-17-legends-of-the-mixtape/nostalgia-ultra-art.jpg")
 ```
 
+I wanted to toast this crossover in philosophy by sharing some data-driven stories of the mixtape. This piece should be good ammo in heated mixtape G.O.A.T convos, at least...
+
 ## Mixtapes by the numbers
 
 So, who was really putting [Numbers On The Boards](https://www.youtube.com/watch?v=DawrlSwHUiM), when it came to mixtapes? In truth, the ethereal nature of the beast and the multitude of ways the product reaches ears without much care for tracking (these are free and unattached to labels, remember) means that comprehensive mixtape statistics are hard to come by.
 
-A good place to start is [DatPiff](http://www.datpiff.com/), probably the leading web service dedicated to hip-hop mixtapes. In the [celebrated section](http://www.datpiff.com/mixtapes/celebrated), you can see download figures mapped to pre-eminent mixtape projects.
+A good place to start is [DatPiff](http://www.datpiff.com/), maybe the leading dedicated website for hip-hop mixtape digging. In the [celebrated section](http://www.datpiff.com/mixtapes/celebrated), you can quickly spot download figures mapped to pre-eminent mixtape projects.
 
 ```{r out.width="75%"}
 knitr::include_graphics("/img/2018-09-17-legends-of-the-mixtape/datpiff-screenshot.png")
 ```
 
-Through harvesting these figures comes a data-driven approach to uncovering who really runs the mixtape game.[^data] This comes with some caveats - mixtape streams are ignored (not readily obtainable for all listings), as are tapes not available on DatPiff (or those that have been taken down). Still, a good idea of the state of play is in reach (PS the next one is best explored on a desktop browser, if you have one handy)...[^bubbles]
+Harvesting these figures and crunching the downloads for each artist can uncover who *really* runs the mixtape game.[^data] This comes with some caveats - mixtape streams are ignored (not readily obtainable for all listings), as are tapes not available on DatPiff (or those that have been taken down). Still, a good idea of the state of play is well within reach (PS the next bit is best enjoyed and explored on a desktop browser, if you have one handy)...[^bubbles]
 
 <style>
 /* https://css-tricks.com/full-width-containers-limited-width-parents/ */
@@ -77,19 +79,20 @@ Through harvesting these figures comes a data-driven approach to uncovering who 
 
 ## Weezy the `r emo::ji("goat")`
 
-In case there was any doubt, Lil Wayne AKA Weezy AKA Tunechi comes out on top of DatPiff mixtape downloads, clocking in at ~18 million. This can be largely attributed to his infamous mixtape run of 2004-2008, encompassing both the *Da Drought* and *Dedication* series. Of the former, [#3](https://www.youtube.com/watch?v=VjGSyQU-YxQ) (2007) is widely regarded as the best of the bunch and fancied as the finest of it's class in critical circles. Your fave could never etc etc.
+In case there was any doubt, Lil Wayne AKA Weezy AKA Tunechi comes out on top of DatPiff mixtape downloads, clocking in at **~18 million**. This can be largely attributed to his infamous mixtape run of 2004-2008, encompassing both the *Da Drought* and *Dedication* series'. Of the former, [#3](https://www.youtube.com/watch?v=VjGSyQU-YxQ) (2007) is widely regarded as the best of the bunch and even fancied as the finest of it's class in critical circles. Your fave could never etc etc.
 
 ```{r out.width="75%"}
 knitr::include_graphics("https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.giphy.com%2Fmedia%2F10rxK8NVwBH6WA%2Fgiphy.gif&f=1")
 ```
 
-Honorable mentions to a few of my personal favourites (with helpful pointers to some best-in-class material):
+Honorable mentions to a few of my favs (plus helpful pointers to some best-in-class material):
 
-- Gucci Mane (5.8 million): Put out a dozen mixtapes during a prolific 2008-2010 period. Check out [The Movie: Part 3 (Burrprint: 3D)](https://www.youtube.com/watch?v=9xpVLjvEPK4) (2009) first. BRRRRRR.
-- Future (4.3 million): The master of twisted Bacchanalia rap, as hard-working as Gucci. Start off with [56 Nights](https://www.youtube.com/watch?v=DXXZ3J_QIGw) (2015).
+- Gucci Mane (5.8 million): Put out a dozen mixtapes during a monster 2008-2010 period. Check out [The Movie: Part 3 (Burrprint: 3D)](https://www.youtube.com/watch?v=9xpVLjvEPK4) (2009) first (BRRRRRR).[^BRRR]
+- Future (4.3 million): The master of twisted Bacchanalia rap, as prolific as Gucci. Start off with [56 Nights](https://www.youtube.com/watch?v=DXXZ3J_QIGw) (2015).
 - Chance the Rapper (2.8 million): [Acid Rap](https://www.youtube.com/watch?v=e67Q-sTHVhc) (2013) and [Coloring Book](https://www.youtube.com/watch?v=H6C0dfq4ZWM) (2016) are dope and up-ended many expectations that independent artists and mixtapes were facing extinction.
 
-I could go on, but why not head back to the interactive and explore some new music yourself `r emo::ji("peace")`
+I could go on, but why not head back to the interactive and explore some of the music yourself `r emo::ji("peace")`
 
 [^data]: All the code used to scrape DatPiff's download numbers, as well as the raw data itself, is stored in [this GitHub repo](https://github.com/ewenme/mixtapes). Check the `src` directory for code and `raw-data` for data in .csv format.
 [^bubbles]: The interactive visualisation of artist mixtape downloads was made with [D3.js](https://d3js.org/) (inspired by [Mike Bostock's D3 Bubble Chart](https://beta.observablehq.com/@mbostock/d3-bubble-chart). Original code can be found in [this Observable notebook](https://beta.observablehq.com/@ewenme/mixtape-kings/2). It's embedded inside the R markdown document used to generate this post (via [blogdown](https://bookdown.org/yihui/blogdown/)), which you can access [here](https://github.com/rbind/ewenme/blob/master/content/blog/2018-09-17-legends-of-the-mixtape.Rmd)
+[^BRRR]: I can't leave without giving it up to Brooke for the [BRRR R package](https://github.com/brooke-watson/BRRR). No running of a slow function is complete without the East Atlanta Santa providing encouragement. 
