--- a/content/blog/2018-12-20-listening-2018.md
+++ b/content/blog/2018-12-20-listening-2018.md
@@ -8,8 +8,8 @@ image: "/img/listening/arthur.jpg"
 draft: no
 ---
 
-[Buy Music Club](https://buymusic.club/) was launched last week by [Avalon Emerson](http://avalonemerson.com/) and a few other contributors (scroll down on the homepage for full *Credits*). You can share records or tracks with links to play and buy them from [Bandcamp](https://bandcamp.com/). Bandcamp is one of the more equitable platforms for indie artists and labels, so this project is a great way to broadcast great tunes and to support the artist directly.
+[Buy Music Club](https://buymusic.club/) was launched last week by [Avalon Emerson](http://avalonemerson.com/) and a few other contributors (scroll down to the bottom of the homepage for the full *Credits* roll call). You can share records or tracks with links to play and buy them from [Bandcamp](https://bandcamp.com/), one of the more equitable platforms for indie artists and labels to get paid. This project is an ingeniously simple way to broadcast great tunes and to encourage support for the artist directly.
 
 I made a playlist of stuff that stuck with me this year, both the rough and the smooth. Check it out and cop the things u like. Love and thanks go out to all the artists.
 
-<iframe src="https://buymusic.club/embed/ewen-ewens-st-that-slapped-n-soothed-in-2k18-playlist" height="500" width="100%" frameborder="0"></iframe>
+<iframe src="https://buymusic.club/embed/ewen-stuff-that-slapped-soothed-~2k18" height="500" width="100%" frameborder="0"></iframe>
