--- a/content/blog/2019-01-05-relative-age-effect-revisited.Rmd
+++ b/content/blog/2019-01-05-relative-age-effect-revisited.Rmd
@@ -13,6 +13,7 @@ knitr::opts_chunk$set(cache = FALSE, warning = FALSE, message = FALSE, echo = FA
 # load packages
 library(tidyverse)
 library(lubridate)
+library(ggridges)
 library(ewenthemes)
 
 # age function
@@ -24,6 +25,23 @@ get_age <- function(from_date,to_date = lubridate::now(),dec = FALSE){
   age
 }
 
+get_days_since_cutoff <- function(birth_date) {
+  
+  birth_date <- lubridate::as_date(birth_date)
+  
+  birth_month <- month(birth_date)
+  
+  cutoff_year <- if_else(birth_month >= 9,
+                         year(birth_date), year(birth_date) - 1)
+  
+  cutoff_date <- as_date(ymd(paste(cutoff_year, "09", "01", sep = "-")))
+  
+  days_since_cutoff <- difftime(birth_date, cutoff_date, units = "days")
+  
+  return(days_since_cutoff)
+  
+}
+
 # load data
 birthdays <- read_csv(file = "https://raw.githubusercontent.com/ewenme/football-squads/master/data/1819_squads.csv")
 
@@ -31,29 +49,52 @@ birthdays <- read_csv(file = "https://raw.githubusercontent.com/ewenme/football-
 eng_birthdays <- birthdays %>% 
   filter(nationality == "England") %>% 
   mutate(age = get_age(from_date = date_of_birth),
-         birthday = yday(date_of_birth))
+         birthday = yday(date_of_birth),
+         birth_month = month(date_of_birth),
+         cutoff_bday_interval = get_days_since_cutoff(date_of_birth)
+         )
 ```
-
-In football (and in other sports, in academia...probably other places, too), an interesting thing happens when you check out the birthdays of elite performers. Take a look at this graphic I put together last year, visualising birthdays of active English players in English football's top four divisions (Premier League, Championship, League One and League Two) during the 2017/18 season:
+ 
+In football, like in other sports (some other places, too), an interesting thing happens when you check out the birthdays of high performers. Take a look at this graphic I put together last year, visualising birthdays of active English players in English football's top four divisions (Premier League, Championship, League One and League Two) during the 2017/18 season, where something is definitely going on `r emo::ji("thinking")`
 
 ![](https://raw.githubusercontent.com/ewenme/football-squads/master/figures/english_age_effect.png)
 
-This phenomenon is known as **relative age effect** (RAE). Participation in a given field is higher amongst those born closer to a cut-off date used to determine age cohorts for said field. One common example of a cut-off date is the academic year - two children born two days apart, but on either side of a school year cut-off date, will be allocated to different school cohorts. Furthermore, one of these kids will be possibly the oldest child relative to their peers, while the other could be the youngest of theirs. 
+The phenomenon at play here is known as **relative age effect**, or RAE. When a "cut-off" date is used to determine age cohorts in a given field, participation in said field is notably higher amongst those born closest to the cut-off. One common example of this is the academic year - two children born just a day apart but, coincidentally, on either side of a school year cut-off date, will be allocated to different school cohorts. Furthermore, one of these kids might be the oldest child relative to their peers - the other could be the youngest of theirs. This seemingly arbitrary decision could have unfortunate consequences attached for the latters chance at elite sporting glory.
 
-> What unintended consequences could this cut-off have for the latter child's future?
+RAE has been popularised in a couple of high-profile, stats-adjacent books - Steven Levitt and Stephen Dubner's [SuperFreakonomics](https://en.wikipedia.org/wiki/SuperFreakonomics) and Malcolm Gladwell's [Outliers](https://en.wikipedia.org/wiki/Outliers_(book)). These examples centered on the birthdates of Canadian ice-hockey players, US Major League baseball players and European football (soccer) players. The latter case has also been [given some shine](http://www.football-observatory.com/IMG/pdf/mr10_eng.pdf) by the *CIES Football Observatory*. The viz at the beginning of this post attracted a decent chunk of [reddit](https://www.reddit.com/r/dataisbeautiful/comments/83ejdw/relative_age_effect_in_english_footballers_your/) and [twitter](https://twitter.com/ewen_/status/972426014738518016) fame. I think these stories connect with people because, well, we all have birthdays for one, and lots of us seek ~~excuses~~ comforting data to explain why we didn't turn out to be a sporting goliath.
 
-RAE has been popularised in a couple of high-profile books (both `r emo::ji("100")` worth checking for), Steven Levitt and Stephen Dubner's [SuperFreakonomics](https://en.wikipedia.org/wiki/SuperFreakonomics) and Malcolm Gladwell's [Outliers](https://en.wikipedia.org/wiki/Outliers_(book)). These examples centered on the birthdates of Canadian ice-hockey players, US Major League baseball players and European football (soccer) players. The latter case has also been [given some shine](http://www.football-observatory.com/IMG/pdf/mr10_eng.pdf) by the *CIES Football Observatory*. The viz at the beginning of this post attracted a decent chunk of [reddit](https://www.reddit.com/r/dataisbeautiful/comments/83ejdw/relative_age_effect_in_english_footballers_your/) and [twitter](https://twitter.com/ewen_/status/972426014738518016) fame. So, not only do I find this stuff interesting, I think other folks do...
-
-To this end, what other stories about English footballer birthdays are there? Seeing as I already copped the data, might as well dive in.
+To this end, what other stories about English footballer birthdays are there? Seeing as I already copped the data[^birthdays-data], I'll just dive in.
 
 ## Is RAE diminishing (or mutating) over time?
 
 I came across [a Guardian article](https://www.theguardian.com/football/2011/jun/19/fa-plans-age-group-football) which describes an FA plan to move the English football club age selection to run January to December (like much of the rest of Europe), rather than the existing September to August age selection. This was from 2011, quoting a *"hope to implement the changes for the 2013-14 season"*. I couldn't find *anything* since to confirm whether or not this actually happened. The data might provide some clues.
 
+
 ```{r}
-ggplot(eng_birthdays, aes(x = factor(age), y = birthday)) +
-  geom_jitter()
+eng_birthdays %>% 
+  group_by(age) %>% 
+  filter(n() >= 30, position != "Goalkeeper") %>% 
+  ggplot(aes(x = age, y = as.numeric(cutoff_bday_interval), group = age)) +
+  geom_boxplot(outlier.colour = "hotpink") +
+  geom_jitter(position = position_jitter(width = 0.1, height = 0), alpha = 1/4) +
+  # geom_hline(yintercept = yday("2018-09-01")) +
+  scale_y_reverse() +
+  scale_x_reverse() +
+  theme_ewen_ws()
 ```
 
+```{r}
+eng_birthdays %>% 
+  group_by(age) %>% 
+  filter(n() >= 30, position != "Goalkeeper") %>% 
+  ggplot(aes(y = age, x = as.numeric(cutoff_bday_interval), group = age)) +
+  geom_boxplot(outlier.colour = "hotpink") +
+  geom_density_ridges() +
+  # geom_jitter(position = position_jitter(width = 0.1, height = 0), alpha = 1/4) +
+  # geom_hline(yintercept = yday("2018-09-01")) +
+  # scale_y_reverse() +
+  # scale_x_reverse() +
+  theme_ewen_ws()
+```
 
 
